<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:background="@color/yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    >
    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue"
        android:textDirection="firstStrongRtl"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/textBlue"
        android:padding="0dp"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textDirection="firstStrongRtl"
        android:textSize="30sp"
        android:layout_marginTop="6dp"
        android:textStyle="bold" />

    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Details"
        android:textColor="@color/textBlue"
        android:textDirection="firstStrongRtl"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="359dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:contentDescription="TODO"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/app_image" />



    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnBgColour"
        android:text="@string/select_date"
        android:textColor="@color/lightGray"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tvSelectedDate"
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/_15_06_2022"
        android:textColor="@color/textBlue"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/selected_date"
        android:textColor="@color/lightGray"
        android:textDirection="firstStrongRtl"
        android:textSize="16sp"
        android:textStyle="bold|italic" />


    <TextView
        android:id="@+id/tvAgeInDays"
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/_0"
        android:textColor="@color/textBlue"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/in_days_till_date"
        android:textColor="@color/lightGray"
        android:textDirection="firstStrongRtl"
        android:textSize="16sp"
        android:textStyle="bold|italic" />


    <TextView
        android:id="@+id/tvAgeInHours"
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/_0"
        android:textColor="@color/textBlue"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/in_hours_till_date"
        android:textColor="@color/lightGray"
        android:textDirection="firstStrongRtl"
        android:textSize="16sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/tvAgeInMinutes"
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/_0"
        android:textColor="@color/textBlue"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/in_minutes_till_date"
        android:textColor="@color/lightGray"
        android:textDirection="firstStrongRtl"
        android:textSize="16sp"
        android:textStyle="bold|italic"/>


    <TextView
        android:id="@+id/tvAgeInSeconds"
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/_0"
        android:textColor="@color/textBlue"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/in_seconds_till_date"
        android:textColor="@color/lightGray"
        android:textDirection="firstStrongRtl"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

</LinearLayout>
</ScrollView>